# rococo-sample-backend

./: .gitignore  README.md  coverage.json  docker-compose.yml  local.env  oauth-setup.md  pyproject.toml
.claude/: anthropic_key.sh  settings.json
adws/: README.md  adw_build_iso.py  adw_document_iso.py  adw_patch_iso.py  adw_plan_build_document_iso.py  adw_plan_build_iso.py  adw_plan_build_test_iso.py  adw_plan_iso.py  adw_test_iso.py  cleanup_worktrees.py  pyproject.toml
adws/adw_modules/: __init__.py  agent.py  data_types.py  error_handling.py  git_ops.py  github.py  preflight.py  state.py  utils.py  workflow_ops.py  worktree_ops.py
adws/adw_tests/: __init__.py  health_check.py  test_agents.py
adws/adw_triggers/: __init__.py  trigger_webhook.py
common/: app_config.py  app_logger.py
flask/: Dockerfile  logger.py  pyproject.toml
specs/: issue-3-adw-a279fd6e-sdlc_planner-generate-tests.md  issue-3-adw-fff8f775-sdlc_planner-todomvc-backend.md  issue-5-adw-1308e31d-sdlc_planner-generate-tests.md  issue-5-adw-5e2e47a3-sdlc_planner-generate-tests-plan-build-test-iso.md  issue-5-adw-6351de40-sdlc_planner-generate-tests-adw-script.md  issue-5-adw-f754f9e8-sdlc_planner-generate-tests.md
tests/: conftest.py  test_app_config.py  test_app_logger.py  test_auth_helper.py  test_auth_helpers.py  test_auth_service.py  test_base_repository.py  test_conftest_fixtures.py  test_decorators.py  test_email_model.py  test_email_service.py  test_factory.py  test_flask_app.py  test_flask_logger.py  test_login_method.py  test_login_method_service.py  test_oauth_service.py  (+9 more)
(+48 files in other folders)
