[project]
name = "adw-system"
version = "0.1.0"
description = "AI Developer Workflow (ADW) system for automated software development"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rococo>=1.0.33",
    "schedule>=1.2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["adw_modules"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"